fixed z-index on cardGroupOptions (imgs aren't in every post ) , post image dynamic

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -664,6 +664,7 @@ input:checked + .slider:before {
 .cardGroupOptions {
 	right: 0;
 	min-width: 250px;
+	z-index: 100;
 }
 
 .cursor-pointer {
